--- a/doc/paper_draft/sections/4-result.tex
+++ b/doc/paper_draft/sections/4-result.tex
@@ -413,7 +413,7 @@ The result without blending weight is shown as `w/o weight' in \cref{fig:exp:abl
 %\TODO{update analysis to match results $\to$}
 %Our full method performs best for `\emph{Line}' data as helps the optical flow stitching overcome errors caused by large pixel motion.
 %However, `w/o weight' performs slightly better on the complete dataset.
-\new{The `Ful Method' outperforms the `w/o weight' because the helps the optical flow stitching weight overcome errors caused by large pixel motion.}
+\new{The `Ful Method' outperforms the `w/o weight' because the blending weight brings down the unreliable optical flow, such as the pixels move out or in one tangent image boundary but they can get reliable results on other tangent images' corresponding pixels.}
 
 
 \begin{table}%[h!]
