--- a/doc/paper_draft/sections/3-approach.tex
+++ b/doc/paper_draft/sections/3-approach.tex
@@ -177,7 +177,7 @@ As each tangent image's optical flow is estimated independently, the estimates m
 \new{The $\omega_i$ is estimated by 
 $e^{-| I_{t,i} - Warp(I_{t+1,i}, \mathcal{F}_{t,i})|}$, the $Warp(\cdot , \cdot)$ is the backwards warping operation and $I_{t+1,i}$ the corresponding tangent image of $I_{t+1}$.}
 %
-\new{The $\mathcal{F}_t$ blended with the weighted tangent images' optical flow,  $\frac{\sum_i{\mathcal{F}_{t,i} \cdot \omega_{i}}}{\sum_i{\omega_i}}$.}
+\new{The $\mathcal{F}_t$ blended with the weighted tangent image optical flows,  $\frac{\sum_i{\mathcal{F}_{t,i} \cdot \omega_{i}}}{\sum_i{\omega_i}}$.}
 
 %% blending method
 %\TODO{???}
