--- a/doc/paper_draft/sections/5-discussion.tex
+++ b/doc/paper_draft/sections/5-discussion.tex
@@ -37,3 +37,7 @@ Our method struggles with large camera translations; one could replace the globa
 
 
 % TODO: acknowledgements
+\paragraph{Acknowledgements.}
+
+We thank the reviewers for their valuable feedback that has helped us improve our paper.
+This work was supported by an EPSRC-UKRI Innovation Fellowship (EP/S001050/1) and RCUK grant CAMERA (EP/M023281/1, EP/T022523/1).
