Fix path errors in my LaTeX

--- a/doc/paper_draft/bmvc_review.tex
+++ b/doc/paper_draft/bmvc_review.tex
@@ -59,7 +59,8 @@
 \usepackage{enumitem}
 \usepackage{booktabs}
 \usepackage{multirow}
-\usepackage{tikz,siunitx,mwe}
+\usepackage{tikz,siunitx}%,mwe}
+\usepackage{grffile}  % adds support for filenames with multiple dots and spaces
 %\usepackage{url}
 \usepackage{doi}
 \usepackage[nameinlink,capitalise,noabbrev]{cleveref}
