Fix UTF8 characters

--- a/doc/paper_draft/bmvc_review.tex
+++ b/doc/paper_draft/bmvc_review.tex
@@ -5,6 +5,10 @@
 %\pdfcompresslevel=0
 %\pdfobjcompresslevel=0
 
+\usepackage[utf8]{inputenc} % allow utf-8 input
+\usepackage[T1]{fontenc}    % use 8-bit T1 fonts
+\usepackage{textcomp}
+
 %% Enter your paper number here for the review copy
 %\bmvcreviewcopy{298}
 
