update draft:1) rearrange table and chart position 2) reduce space to 10 pages.

--- a/doc/paper_draft/bmvc_review.tex
+++ b/doc/paper_draft/bmvc_review.tex
@@ -51,7 +51,8 @@
 %\newcommand\todolist[1]{\textcolor{red}{#1}}
 %\newcommand{\IGNORE}[1]{}
 \newcommand{\DELETE}[1]{}%\textcolor{red}{#1}}
-\newcommand{\new}[1]{\textcolor{blue}{#1}}
+%\newcommand{\new}[1]{\textcolor{blue}{#1}}
+\newcommand{\new}[1]{#1}
 \newcommand\MZY[1]{\textcolor{green}{{[Mingze: #1]}}}
 \newcommand{\CR}[1]{\textcolor{cyan}{{[Christian: #1]}}}
 \newcommand{\footurl}[2]{\href{#1}{#2}\footnote{\url{#1}}}
