--- a/doc/paper_draft/sections/5-discussion.tex
+++ b/doc/paper_draft/sections/5-discussion.tex
@@ -15,7 +15,7 @@ Our evaluation shows that our method achieves state-of-the-art performance for 3
 \new{Our proposed approach overcomes the limited resolutions supported by CNN-based methods due to model size constraints (e.g. 1024$\times$512 \cite{ArtizZAD2020}) by processing tangent images separately.
 This enables the estimation of high-resolution 360° optical flow, for example at 2K$\times$1K resolution, which is not supported by existing methods.}
 
-
+\vspace{-1em}
 %%\textbf{Limitation \& Future Work}
 \new{\paragraph{Limitations.}
 Large pose changes are a common limitation of most optical flow methods, which are primarily designed for handling small motions.
@@ -25,7 +25,7 @@ This helps in the case of moderate pose changes, but large pose changes remain c
 }
 
 
-
+\vspace{-1em}
 \paragraph{Future Work.}
 %To sccelerate the projection and stitch step, with multi-thread or c++.
 %Pixel-based warping to deal with non-rigid or un-egomoiton.
@@ -37,7 +37,8 @@ Our method struggles with large camera translations; one could replace the globa
 
 
 % TODO: acknowledgements
-\paragraph{Acknowledgements.}
+%\paragraph{Acknowledgements.}
+\section*{Acknowledgements}
 
 We thank the reviewers for their valuable feedback that has helped us improve our paper.
 This work was supported by an EPSRC-UKRI Innovation Fellowship (EP/S001050/1) and RCUK grant CAMERA (EP/M023281/1, EP/T022523/1).
